<resources>
    <string name="app_name">메디데이</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- 사이드 메뉴 -->

    <string name="menu_medicine_list">내 약 목록</string>
    <string name="menu_medicine_intake">복용 내역 조회</string>
    <string name="menu_relation_list">가족 목록</string>
    <string name="menu_relation_intake">가족 복용 내역 조회</string>
    <string name="menu_hospital_list">병원 스케줄 목록</string>
    <string name="menu_change_info">내 정보 변경</string>
    <string name="menu_change_pw">비밀번호 변경</string>
    <string name="menu_tos_list"></string>


    <!--<string name="server_url">https://bicycle.windygnt.myds.me/bicycle/rest</string>-->
    <!--<string name="server_user">http://172.30.1.67:8080/mariwoo/user.windy</string>
    <string name="server_medicine">http://172.30.1.67:8080/mariwoo/medicine.windy</string>
    <string name="server_hospital">http://172.30.1.67:8080/mariwoo/hospital.windy</string>-->
    <!--<string name="server_user">http://192.168.1.44:8080/mariwoo/user.windy</string>
    <string name="server_medicine">http://192.168.1.44:8080/mariwoo/medicine.windy</string>
    <string name="server_hospital">http://192.168.1.44:8080/mariwoo/hospital.windy</string>-->
    <string name="server_user">https://mariwoo.windygnt.myds.me/mariwoo/user.windy</string>
    <string name="server_medicine">https://mariwoo.windygnt.myds.me/mariwoo/medicine.windy</string>
    <string name="server_hospital">https://mariwoo.windygnt.myds.me/mariwoo/hospital.windy</string>


    <!--네이버-->
    <string name="naver_client_id">발급받은 아이디</string>
    <string name="naver_client_secret">네이버발급비번</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>


</resources>